--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ DB_HOST=pgsql_app
 # Порт БД (при использовании docker: конечный порт внутри контейнера)
 DB_PORT=5432
 # Название БД
-POSTGRES_DB=fastapp
+POSTGRES_DB=
 # Имя пользователя БД
-POSTGRES_USER=postgres
+POSTGRES_USER=
 # Пароль БД
-POSTGRES_PASSWORD=1111
+POSTGRES_PASSWORD=
 
 # http путь к документации docs
 DOCS_URL=/docs
