--- a/.env.keycloak
+++ b/.env.keycloak
@@ -52,4 +52,4 @@ REALM=
 # ID Клиента созданного в админке
 CLIENT_ID=
 # Публичный ключ для дэшифровки access токена (cм. в админке Keycloak)
-PUBLIC_KEY=
+PUBLIC_KEY_KEYCLOAK=
